<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/itemSubmenuToggleFaceDetection"
        android:orderInCategory="3"
        android:title="@string/toggle_face_detection">
        <menu>
            <item
                android:id="@+id/itemToggleFDOn"
                android:title="@string/toggle_face_detection_on" />
            <item
                android:id="@+id/itemToggleFDOff"
                android:title="@string/toggle_face_detection_off" />
        </menu>
    </item>

    <item
        android:id="@+id/itemImageManipulation"
        android:orderInCategory="4"
        android:title="@string/image_manipulation" />
    <item
        android:id="@+id/itemFaceRecognition"
        android:orderInCategory="5"
        android:title="@string/face_recognition">
        <menu>
            <item
                android:id="@+id/itemClearFaceRecogntion"
                android:title="@string/clear_database_recognition" />
        </menu>
    </item>
</menu>